data is checked ready for analysis

--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -56,7 +56,7 @@
     "    - Error Checking\n",
     "        - The Extreme Outlier\n",
     "        - Suspicious Stats\n",
-    "        - Out of Place Types\n",
+    "        - Type Testing\n",
     "1. Analysis\n",
     "    - Stat Distributions\n",
     "        - Global Averages and Medians\n",
@@ -693,6 +693,32 @@
    "source": [
     "print(f\"Number of unique values in 'Type 1' column: {pokedf['Type 1'].nunique()}\")\n",
     "print(f\"Number of unique values in 'Type 2' column: {pokedf['Type 2'].nunique()}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 18 types in Pokemon, and for the dataset, a placeholder '-' for the secondary typing of monotype Pokemon, so there are no unexpected values.\n",
+    "\n",
+    "With that, we have finished verifying the accuracy of our dataset. Note that mispellings of Pokemon names could be present, but since in the data preparation we made sure that all Pokemon are labelled with the correct generation, it doesn't matter whether there are any spelling mistakes in names."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"text-align: center;\">Analysis</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Stat Distributions**"
    ]
   }
  ],
