--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -710,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"text-align: center;\">Analysis</p>"
+    "## <h1 style=\"text-align: center;\">Analysis</h1>"
    ]
   },
   {
