fixed headers + done for the day

--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"text-align: center;\">Introduction</p>\n",
+    "## <h1 style=\"text-align: center;\">Introduction</h1>\n",
     "\n",
     "### **Background**\n",
     "\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"text-align: center;\">Table of Contents</p>"
+    "## <h1 style=\"text-align: center;\">Table of Contents</h1>"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <p style=\"text-align: center;\">The Data</p>\n",
+    "## <h1 style=\"text-align: center;\">The Data</h1>\n",
     "\n",
     "### **Loading (+ Libraries)**"
    ]
