--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Missing Values (and Pokemon!) Check"
+    "### Missing Values (and Pokemon!) Check"
    ]
   },
   {
