--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading in the original dataframe"
+    "###  <h3 style=\"text-align: center;\">Reading in the original dataframe</h3>"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Missing Values (and Pokemon!) Check"
+    "### <h3 style=\"text-align: center;\">Missing Values (and Pokemon!) Check</h3>"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding New Pokemon"
+    "### <h3 style=\"text-align: center;\">Adding New Pokemon</h3>"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extra Columns and Data"
+    "### <h3 style=\"text-align: center;\">Extra Columns and Data</h3>"
    ]
   },
   {
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Generation \\#"
+    "### **Generation \\#**"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Special Classes"
+    "### **Special Classes**"
    ]
   },
   {
