--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  <h3 style=\"text-align: center;\">Reading in the original dataframe</h3>"
+    "###  <h3 style=\"text-align: center;\">Reading in the Data</h3>"
    ]
   },
   {
@@ -1048,6 +1048,14 @@
    ],
    "source": [
     "pokedf.head(963)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"text-align: center;\">Creating CSV for Analysis</h3>"
    ]
   },
   {
