lots of planning

--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "### **Goal**\n",
     "\n",
-    "Leveraging Python libraries, we hope to both quantify and visualize the effect of powercreep. This will be done by analyzing what makes a Pokemon \"strong\", and using that as a metric to view powercreep over the 9 generations of Pokemon."
+    "Leveraging Python libraries, we hope to both quantify and visualize the effect of powercreep. This will be done by analyzing the inclusion of certain factors that tend to increase the power level of Pokemon by generation. Or, in the case that no clear distinction is shown by broad analysis, check to see if there is noticeable powercreep to begin with."
    ]
   },
   {
@@ -64,12 +64,13 @@
     "        - Legendaries\n",
     "        - Mythicals\n",
     "        - Notables\n",
-    "        - \"Optimized\" Pokemon (note to self, make a scatterplot or some other one of all pokemon with bst on x and standard deviation on y and color them by generation)\n",
+    "        - \"Optimized\" Pokemon\n",
     "    - Type Strength\n",
     "        - Offensive\n",
     "        - Defensive\n",
     "    - Smogon Usage\n",
     "        - Gen 9 OU High Rank\n",
+    "        - Gen 9 Ubers High Rank\n",
     "1. Conclusions\n",
     "    "
    ]
@@ -667,7 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There don't appear to be any major outlying stats."
+    "There aren't any major outlying values. Previously, there were due to Eternamax Eternatus, which I removed from the dataset in the preparation, due to the fact that it is not a player usable Pokemon."
    ]
   },
   {
@@ -734,14 +735,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Checking for average base stats total by generation for any obvious signs of powercreep."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -802,6 +795,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One of the most general (but not comprehensive) ways to check for the strength of a Pokemon is by checking their aptly named *Base Stat Total*, or BST. Athough the distribution of base stats matters just as much, generally, Pokemon with a higher BST tend to be stronger overall."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Special Pokemon**"
    ]
   },
@@ -814,11 +815,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# graph average power of legendaries compared to non legendary pokemon\n",
+    "# then graph legenaries per generation"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Mythicals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# basically same as legendaries\n",
+    "# one caveat is that they are usually restricted pokemon that arent allowed to be played, but for curiosities sake we might as well look at them"
    ]
   },
   {
@@ -830,11 +851,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# handle this one a different way\n",
+    "# perhaps combine all of the categories into 1 for analysis, except optimized mons"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 'Optimized' Pokemon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a scatterplot or a similar graph of all pokemon with bst on x and standard deviation on y and color them by generation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "explanation of the concept of min/maxed pokemon"
    ]
   },
   {
@@ -850,7 +898,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "explain typings"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Offensive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find a type chart of weaknesses online\n",
+    "# rank types by offensive strength\n",
+    "# possibly a heat map with the sum of offensive typing advantage as the color"
    ]
   },
   {
@@ -862,11 +929,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### **Stat Distributions**"
+    "# opposite of offensive, same procedure"
    ]
   },
   {
@@ -875,6 +943,22 @@
    "metadata": {},
    "source": [
     "### **Smogon Usage**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Long explanation of what smogon is goes here. This includes different tiers of course."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gen 9 OU High Rank"
    ]
   },
   {
@@ -1426,6 +1510,40 @@
     "for entry in parsed_data:\n",
     "        print(entry)\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "note to self, use this dictionary to find out the generation representation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gen 9 Ubers High Rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# same as above basically\n",
+    "# get txt file from smogon"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "same as above"
    ]
   },
   {
