--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -52,8 +52,8 @@
    "source": [
     "1. The Data\n",
     "    - Loading\n",
-    "    - Previewing & Explaining\n",
     "        - Relevance\n",
+    "    - Previewing & Explaining\n",
     "    - Error Testing\n",
     "        - The Extreme Outlier\n",
     "        - Suspicious Stats\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,12 +121,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Relevance\n",
+    "\n",
+    "For relevance, I will be removing Mega and Primal Pokemon, as those Pokemon are limited to past generations as gimmicks. It would not be fair to include them, as other generations' gimmicks cannot be quantified either, such as generation 9's terastalization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 545,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing mega's and primals\n",
+    "pokedf = pokedf[~pokedf['Name'].str.contains('Mega ')]\n",
+    "pokedf = pokedf[~pokedf['Name'].str.contains('Primal ')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Previewing & Explaining**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [
     {
@@ -227,25 +248,6 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mega Venusaur</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>GRASS</td>\n",
-       "      <td>POISON</td>\n",
-       "      <td>625</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Charmander</td>\n",
@@ -264,27 +266,46 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>-</td>\n",
+       "      <td>405</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Dex No           Name   Base Name Type 1  Type 2  BST  HP  Attack  Defense  \\\n",
-       "0       1      Bulbasaur   Bulbasaur  GRASS  POISON  318  45      49       49   \n",
-       "1       2        Ivysaur     Ivysaur  GRASS  POISON  405  60      62       63   \n",
-       "2       3       Venusaur    Venusaur  GRASS  POISON  525  80      82       83   \n",
-       "3       3  Mega Venusaur    Venusaur  GRASS  POISON  625  80     100      123   \n",
-       "4       4     Charmander  Charmander   FIRE       -  309  39      52       43   \n",
+       "   Dex No        Name   Base Name Type 1  Type 2  BST  HP  Attack  Defense  \\\n",
+       "0       1   Bulbasaur   Bulbasaur  GRASS  POISON  318  45      49       49   \n",
+       "1       2     Ivysaur     Ivysaur  GRASS  POISON  405  60      62       63   \n",
+       "2       3    Venusaur    Venusaur  GRASS  POISON  525  80      82       83   \n",
+       "4       4  Charmander  Charmander   FIRE       -  309  39      52       43   \n",
+       "5       5  Charmeleon  Charmeleon   FIRE       -  405  58      64       58   \n",
        "\n",
        "   Sp. Attack  Sp. Defense  Speed  Generation  Legendary  Mythical  Notable  \n",
        "0          65           65     45           1      False     False    False  \n",
        "1          80           80     60           1      False     False    False  \n",
        "2         100          100     80           1      False     False    False  \n",
-       "3         122          120     80           1      False     False    False  \n",
-       "4          60           50     65           1      False     False    False  "
+       "4          60           50     65           1      False     False    False  \n",
+       "5          80           65     80           1      False     False    False  "
       ]
      },
-     "execution_count": 520,
+     "execution_count": 546,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +481,7 @@
        "1200     False    False  "
       ]
      },
-     "execution_count": 521,
+     "execution_count": 547,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,27 +516,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Relevance\n",
-    "\n",
-    "For relevance, I will be removing Mega and Primal Pokemon, as those Pokemon are limited to past generations as gimmicks. It would not be fair to include them, as other generations' gimmicks cannot be quantified either, such as generation 9's terastalization."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 522,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# removing mega's and primals\n",
-    "pokedf = pokedf[~pokedf['Name'].str.contains('Mega ')]\n",
-    "pokedf = pokedf[~pokedf['Name'].str.contains('Primal ')]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### **Error Testing**"
    ]
   },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "1057         145           95    130           8       True     False    False  "
       ]
      },
-     "execution_count": 524,
+     "execution_count": 549,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [
     {
