spelling + final commit(?)

--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Standing head and shoulders over every single media company and intellectual property group in the world is Pokemon. As the highest grossing media franchise of all time, Pokemon has cemented, no matter how big or small, a place in the minds of almost everyone. Because of the many games and multiplayer features added, communities of hobbyists dedicated to competitive Pokemon battling have developed. \n",
     "\n",
-    "These hobbyists have developed remarkably optimized Pokemon teams, and continue to battle online with a thriving competitive scene. Everytime a new generation of Pokemon is released, the online competitive scene has to scramble to adjust to what has been deemed \"powercreep\". Powercreep is a term used throughout gaming to generally refer to the phenomenon of new > old, that is, new content released by the maker of the game more often than not tend to outclass older content. The most recent Pokemon generation, generation 9, has been a particularly emblematic piece of this gaming standard.\n",
+    "These hobbyists have developed remarkably optimized Pokemon teams, and continue to battle online with a thriving competitive scene. Every time a new generation of Pokemon is released, the online competitive scene has to scramble to adjust to what has been deemed \"powercreep\". Powercreep is a term used throughout gaming to generally refer to the phenomenon of new > old, that is, new content released by the maker of the game more often than not tend to outclass older content. The most recent Pokemon generation, generation 9, has been a particularly emblematic piece of this gaming standard.\n",
     "\n",
     "### **Goal**\n",
     "\n",
@@ -507,7 +507,7 @@
     "\n",
     "- Name: Self explanatory with one caveat, certain Pokemon are considered *alternate forms*, that is, they are the same species of Pokemon, but simply a different variant. One example is the Mega Venusaur visible in the dataframe head. Notice the entry shares the same Dex number as its base form, Venusaur.\n",
     "\n",
-    "- Base Name: Every Pokemon has the same Base Name as Name, except the aformentioned variants, who instead have the name of the original form.\n",
+    "- Base Name: Every Pokemon has the same Base Name as Name, except the aforementioned variants, who instead have the name of the original form.\n",
     "\n",
     "- Type 1 and 2: There are 18 elemental \"types\" of Pokemon, which will be explained in more detail later. Notice that not all Pokemon have two types, some only have one. In that case, the Type 2 column will have a placeholder '-'.\n",
     "\n",
@@ -736,7 +736,7 @@
    "source": [
     "There are 18 types in Pokemon, and for the dataset, a placeholder '-' for the secondary typing of monotype Pokemon, so there are no unexpected values.\n",
     "\n",
-    "With that, we have finished verifying the accuracy of our dataset. Note that mispellings of Pokemon names could be present, but since in the data preparation we made sure that all Pokemon are labelled with the correct generation, it doesn't matter whether there are any spelling mistakes in names."
+    "With that, we have finished verifying the accuracy of our dataset. Note that misspellings of Pokemon names could be present, but since in the data preparation we made sure that all Pokemon are labelled with the correct generation, it doesn't matter whether there are any spelling mistakes in names."
    ]
   },
   {
@@ -938,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the most general (but not comprehensive) ways to check for the strength of a Pokemon is by checking their aptly named *Base Stat Total*, or BST. Athough the distribution of base stats matters just as much, generally, Pokemon with a higher BST tend to be stronger overall. Error bars were removed from the graph as since all Pokemon are in the dataset, there is no error."
+    "One of the most general (but not comprehensive) ways to check for the strength of a Pokemon is by checking their aptly named *Base Stat Total*, or BST. Although the distribution of base stats matters just as much, generally, Pokemon with a higher BST tend to be stronger overall. Error bars were removed from the graph as since all Pokemon are in the dataset, there is no error."
    ]
   },
   {
@@ -1155,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a noticable uptick in speed in the newest generations, 8 and 9. Speed is arguably the most important stat in all of Pokemon, because it determines mover order. In many 1v1 scenarios, even if the slower Pokemon is more powerful, it still loses. \n",
+    "There is a noticeable uptick in speed in the newest generations, 8 and 9. Speed is arguably the most important stat in all of Pokemon, because it determines mover order. In many 1v1 scenarios, even if the slower Pokemon is more powerful, it still loses. \n",
     "\n",
     "By highlighting the density peaks and noting the specific x-value we see that generation 9 has a noticeably larger BST than the other generations. In speed as well, generation 9 ranks second. Even then, generation 9 has a higher mean and median speed than generation 4."
    ]
@@ -1328,7 +1328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly enough, while individual Pokemon with strong typings tend to be more competitively viable, the newer generations do not have a noticeably higher count of stronger types. While other factors can affect this, we are lead to believe that typing doesn't have an overwhelming effect on a Pokemons strength in a vacuum. This is likely because certain types tend to have higher and lower stats in general, for example, Dragon types are almost always stronger than your average Pokemon. Bug types, on the other hand, tend to have lower stats."
+    "Interestingly enough, while individual Pokemon with strong typings tend to be more competitively viable, the newer generations do not have a noticeably higher count of stronger types. While other factors can affect this, we are lead to believe that typing doesn't have an overwhelming effect on a Pokemon's strength in a vacuum. This is likely because certain types tend to have higher and lower stats in general, for example, Dragon types are almost always stronger than your average Pokemon. Bug types, on the other hand, tend to have lower stats."
    ]
   },
   {
@@ -1404,7 +1404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the exception of generation 6, the more recent generations tend to have many more legendary Pokemon than past generations. And on average, said legendary Pokemon tend to be significantly stronger (higher BST) than non-special Pokemon. An important distinction to notice is that while generations 6 and 9 seem to not be following this trend, they have thier own categories of Pokemon that while are not explicitly legendary, have elevated stats. For generation 6 these are the Ultra Beasts, and for generation 9, these are the Paradox Pokemon. In addition, generation 9, being the newest generation, still has new DLC (expansions) being released, where more legendaries are expected to join the fray."
+    "With the exception of generation 6, the more recent generations tend to have many more legendary Pokemon than past generations. And on average, said legendary Pokemon tend to be significantly stronger (higher BST) than non-special Pokemon. An important distinction to notice is that while generations 6 and 9 seem to not be following this trend, they have their own categories of Pokemon that while are not explicitly legendary, have elevated stats. For generation 6 these are the Ultra Beasts, and for generation 9, these are the Paradox Pokemon. In addition, generation 9, being the newest generation, still has new DLC (expansions) being released, where more legendaries are expected to join the fray."
    ]
   },
   {
@@ -1540,7 +1540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we found earlier that the average BST of Pokemon hasn't changed much over time, we should try to see *how* those base stats have been distributed. Pokemon is a game of niches. A Pokemon built to achieve a specific purpose tends to outperform balanced Pokemon when teambuilding. \n",
+    "Since we found earlier that the average BST of Pokemon hasn't changed much over time, we should try to see *how* those base stats have been distributed. Pokemon is a game of niches. A Pokemon built to achieve a specific purpose tends to outperform balanced Pokemon when team building. \n",
     "\n",
     "For example, if you take 2 Pokemon with 600 BST, and you need to fill the attacker slot on your team, then it would be more beneficial to have a Pokemon that has more of those 600 stat points in the Attack categories than one that just has 100 in every category. Going even farther, let's say that the Pokemon only learns Special Attack moves, then it doesn't need a high physical Attack stat. \n",
     "\n",
